# Codexible

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  PRD.md  README.md  UI_SYSTEM.md  WIREFRAME.md  cliproxy_api_capability_map.md  docker-compose.yml  fix-vn-ime.js  next.config.ts  nul  package.json  playwright.config.ts  pnpm-lock.yaml  remote_deploy.py  ssh_err.txt  test-cliproxy.mjs  tsconfig.json  vitest.config.ts  vitest.setup.ts
.agent/workflows/: opsx-archive.md
.github/prompts/: opsx-apply.prompt.md  opsx-explore.prompt.md  opsx-propose.prompt.md
.github/workflows/: ci.yml  docker-security.yml
.opencode/command/: opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md
app/: HomePageClient.tsx  globals.css  layout.tsx  page.tsx
app/components/: CopyButton.tsx  FloatingContact.tsx  Header.tsx  InstallScriptModal.tsx  LanguageToggle.tsx  LoginModal.tsx  MetricCard.tsx  MobileMenu.tsx  SkeletonLoader.tsx  ThemeToggle.tsx  Toast.tsx  index.ts
app/dashboard/: DashboardClient.tsx  dataResolution.ts  page.tsx
app/docs/: page.tsx
app/hooks/: index.ts  useCopyToClipboard.ts  useTheme.ts  useToast.ts
app/install.sh/: route.ts
app/lib/: api.ts  csp.ts  index.ts  installScript.ts  mockDashboardData.ts  mockTokens.ts
app/lib/i18n/: en.ts  (+2 more)
app/sections/: CtaSection.tsx  FeaturesSection.tsx  FooterSection.tsx  HeroSection.tsx  PricingSection.tsx  StepsSection.tsx  TrustSection.tsx  index.ts
app/types/: index.ts
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/: 001_create_plans.sql  002_create_users.sql  003_create_api_keys.sql  004_create_daily_usage.sql  005_seed_demo_data.sql  006_fix_demo_api_key_hashes.sql  007_add_key_full_for_cliproxy_sync.sql  008_create_request_logs_and_cost_columns.sql
backend/src/: app.rs  config.rs  error.rs  main.rs
backend/src/extractors/: auth.rs
backend/src/middleware/: cors.rs  mod.rs  rate_limit.rs  request_timing.rs
backend/src/models/: api_key.rs  mod.rs  plan.rs  usage.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  cliproxy_management.rs  dashboard.rs  health.rs  keys.rs  mod.rs  proxy.rs  usage.rs
backend/src/services/: audit.rs  auth.rs  cliproxy.rs  cost_calculator.rs  keys.rs  metering.rs  mod.rs
backend/tests/: auth_test.rs  keys_test.rs  performance_controls_test.rs  usage_test.rs
backend/tests/common/: mod.rs
cli-proxy-api/: .env.example  config.yaml
cli-proxy-api/auths/: .gitkeep
e2e/: .env.example  README.md  cliproxy-integration.spec.ts
openspec/: config.yaml
prototype/install-modal/: README.md  index.html  script.js  styles.css
scripts/performance/: baseline.json  thresholds.json  validate.mjs
(+123 files in other folders)
